--- a/stylesheet.css
+++ b/stylesheet.css
@@ -172,7 +172,7 @@ footer img {
 }
 
 
--------------------- Video ------------------
+/*-------------------- Video ------------------*/
 
 video {
     width: 100%;
