--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,8 +4,6 @@
 
 #header-top{
   margin: 0.5em 0 ;
-/*  position: fixed; /* Set the navbar to fixed position */
-  /*top: 0;  Position the navbar at the top of the page*/*/
 }
 
 #footer-top{
@@ -55,7 +53,6 @@
   justify-content: space-around;
   flex-wrap: wrap;
   padding: 1em;
-
 }
 
 
@@ -69,6 +66,7 @@ body{
     max-width: 30em;
     margin: 0 auto;
     line-height: 1.5em;
+    padding: 0 1em;
 
     font-size: 1.2em;
 }
@@ -76,6 +74,7 @@ body{
 .skills {
   max-width: 32em;
   margin: 0 auto;
+  padding: 0 1em;
 }
 
 /*-------------------- Color & Scheme ------------------*/
@@ -100,15 +99,17 @@ h1, h2 {
 }
 
 
-.php {
-  /*background: #eee;*/
-}
 
-/*nav {
-  background-image: url("images/header-background.jpg");
+#nav-header {
+
+  background-image: url("images/header2.png");
+  /*background-color: rgba(255, 0, 0, 0.5);*/
+  /*background: rgba(255, 0, 0, 0.5);*/
   background-repeat: no-repeat;
   background-attachment: fixed;
-}*/
+  background-position: 0% 0%;
+
+}
 
 /*-------------------- IMAGES------------------*/
 
@@ -208,5 +209,9 @@ video {
 
   #hamber {
     margin-bottom: 1em;
+  }
+
+  #nav-header {
+    background-image: url("images/header-m.png");
   }
 }
