--- a/stylesheet.css
+++ b/stylesheet.css
@@ -133,7 +133,7 @@ h1, h2 {
   background-image: url("images/header2.png");
   /*background-color: rgba(255, 0, 0, 0.5);*/
   background-repeat: no-repeat;
-  /*background-attachment: fixed;*/
+  background-attachment: scroll;
   /*background-position: center;*/
   background-size: 100% 100%;
   border: none;
@@ -244,7 +244,7 @@ video {
   #nav-header {
     background-image: url("images/header-m.png");
     background-attachment: fixed;
-    background-size: 100% 100%;
+    background-size: 100% 38%;
 
   }
 }
