--- a/stylesheet.css
+++ b/stylesheet.css
@@ -243,8 +243,8 @@ video {
 
   #nav-header {
     background-image: url("images/header-m.png");
-    /*background-attachment: fixed;*/
-    /*background-size: 100% 38%;*/
+    background-attachment: fixed;
+    background-size: 100% 38%;
 
   }
 }
