--- a/stylesheet.css
+++ b/stylesheet.css
@@ -134,8 +134,8 @@ h1, h2 {
   /*background-color: rgba(255, 0, 0, 0.5);*/
   background-repeat: no-repeat;
   background-attachment: scroll;
-  /*background-position: center;*/
-  background-size: 100% 100%;
+  background-position: center;
+  /*background-size: 100% 100%;*/
   border: none;
 
 }
@@ -242,10 +242,10 @@ video {
   }
 
   #nav-header {
-    /*background-image: url("images/header-m.png");*/
+    background-image: url("images/header-new.png");
     /*background-attachment: fixed;*/
     background-position: center;
-    background-size: 200% 200%;
+    /*background-size: 200% 200%;*/
 
   }
 }
