--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,6 +34,7 @@
   justify-content: space-around;
   flex-wrap: wrap;
   padding: 1em;
+  text-align: center;
 }
 
 .project {
@@ -89,7 +90,7 @@
 /*-------------------- Typography------------------*/
 
 body {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 .introduction {
@@ -142,7 +143,7 @@ h2 {
 }
 
 #nav-header {
-  background-image: url("images/header2.png");
+  background-image: url('images/header2.png');
   /*background-color: rgba(255, 0, 0, 0.5);*/
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -255,7 +256,7 @@ video {
   }
 
   #nav-header {
-    background-image: url("images/header-new.png");
+    background-image: url('images/header-new.png');
     /*background-attachment: fixed;*/
     background-position: center;
     /*background-size: 200% 200%;*/
